--- a/mojichimera/pom.xml
+++ b/mojichimera/pom.xml
@@ -6,8 +6,8 @@
     <groupId>mojimoon</groupId>
     <artifactId>mojichimera</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>Mojimoon Chimera</name>
-    <version>0.3.4</version>
-    <description>Chimera expansion by Mojimoon.</description>
+    <version>0.3.5</version>
+    <description>Chimera expansion by Mojimoon. Now crossover with The Packmaster! (Can run without The Packmaster; to enable the crossover, you need to load Packmaster before this mod.)</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -59,6 +59,20 @@
             <scope>system</scope>
             <systemPath>${Steam.path}/workshop/content/646570/2970981743/CardAugments.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>STS-Discord-Modding-Technical</groupId>
+            <artifactId>ThePackmaster</artifactId>
+            <version>2.2.3</version>
+            <scope>system</scope>
+            <systemPath>${Steam.path}/workshop/content/646570/2920075378/ThePackmaster.jar</systemPath>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>STS-Discord-Modding-Technical</groupId>-->
+<!--            <artifactId>expansionPacks</artifactId>-->
+<!--            <version>1.3.3</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${Steam.path}/workshop/content/646570/2920075378/ThePackmasterExpansionPacks.jar</systemPath>-->
+<!--        </dependency>-->
     </dependencies>
 
 
