--- a/mojichimera/pom.xml
+++ b/mojichimera/pom.xml
@@ -6,7 +6,7 @@
     <groupId>mojimoon</groupId>
     <artifactId>mojichimera</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>Mojimoon Chimera</name>
-    <version>0.5.2</version>
+    <version>0.5.3</version>
     <description>Chimera expansion by Mojimoon. Now crossover with The Packmaster! (Can run without The Packmaster; to enable the crossover, you need to load Packmaster before this mod.)</description>
 
     <properties>
@@ -101,6 +101,7 @@
                             <target>
                                 <!-- This moves your mod into a common folder where all mods you make can go. -->
                                 <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
+<!--                                <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/workshop/content/646570/1605060445/mods/${project.artifactId}.jar"/>-->
                             </target>
                         </configuration>
                         <goals>
