--- a/mojichimera/pom.xml
+++ b/mojichimera/pom.xml
@@ -6,8 +6,8 @@
     <groupId>mojimoon</groupId>
     <artifactId>mojichimera</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>Mojimoon Chimera</name>
-    <version>0.6.3</version>
-    <description>Chimera expansion by Mojimoon. Now crossover with The Packmaster! (Can run without The Packmaster; to enable the crossover, you need to load Packmaster before this mod.)</description>
+    <version>0.6.4</version>
+    <description>Chimera expansion by Mojimoon. 130+ new modifiers. Optional crossover contents with the Packmaster.</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
